* Alerts
** Change: Minimum alert size has been decreased slightly.
** Fixed: Alerts could sometimes stay on the screen after the encounter ended.
* Mechanic Timers
** Change: 10th's of a second have returned sub 10 seconds, this was a rounding issue.
* Hammerknell
** Soulrender Zilas
*** New: Added a timer for the first Soulrender's Grasp.
** Estrode
*** Change: Removed Duration countdown for Mistress of the Rift alert.
*** Change: Removed Duration countdown for Rage of the North alert.
*** Change: Set Mistress of the Rift alert duration to 2 seconds.
*** Chnage: Set Rage of the North alert duration to 2 seconds.
----
v0.8.7
* System
** Change: Tweaked the main engine for Safe's Raid Manager to better track combat states.
** Note: The above, although a small change should greatly improve the accuracy of combat monitoring.
* Greenscale's Blight
** Fixed Infiltrator Johlen error on Bomb phase.
** Fixed Lord Greenscale error during Verdant Annihilator phase.
----
v0.8.6
* Trigger Engine
** Buffs
*** New: There is now a new trigger for buffs/debuffs which target raid members.
*** Change: All previous buff triggers for players have been converted. Please report any issues.
*** Change: Buff triggers are now matched to an encounter and unit ID before triggering.
*** Fixed: BuffRemove triggers where not working as intented.
* Mechanic Timers
** Fixed: Setting changes were not applied until a /reloadui or restart.
** Note: This was the same issue as the previously fixed alert settings.
* Hammerknell
** Soulrender Zilas
*** Fixed: The duration portion of Soulrenders Grasp had become disabled.
** Matron Zamira
*** New: Timer added for spawn of adds after Tome use.
*** New: Timer added for duration of debuff before Tome can be used again.
*** Change: Alert for Mark of Oblivion duration reduced slightly.
** Estrode
*** New: Added a stop method to Mistress of the Rift buff for when it's removed.